# Shell-Quest

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  shellquest-bonus-tickets.md  shellquest-tickets.md
scripts/: setup_box.py
src/: __init__.py  main.py  ui.py
src/data/: themes.json
src/engine/: __init__.py  checker.py  runner.py  sandbox.py  theme_builder.py
src/integrations/: __init__.py  apify_client.py  box_client.py
tests/: test_checker.py  test_engine.py
